--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,5 +77,6 @@
         "typeinfo": "cpp",
         "valarray": "cpp",
         "variant": "cpp"
-    }
+    },
+    "C_Cpp.default.compileCommands": "/home/aisee/fls/apps/example-receive/external/json/builddir/compile_commands.json"
 }
