--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,5 +81,6 @@
     "C_Cpp.default.compileCommands": "/home/aisee/fls/apps/example-receive/external/json/builddir/compile_commands.json",
     "cmake.environment": {
         "APP_SOCKET": "tcp://*:4000"
-    }
+    },
+    "cmake.sourceDirectory": "/home/notavis/barcode-app/src"
 }
